--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -1,17 +1,24 @@
 ---
 # http://docs.docker.com/installation/ubuntulinux/
 
-- apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=36A1D7869245C8950F966E92D8576A8BA88D21E9
-- apt_repository: repo='deb https://get.docker.io/ubuntu docker main' update_cache=yes
-- apt: name=lxc-docker force=yes
+- name:    Adding Docker key file
+  apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=36A1D7869245C8950F966E92D8576A8BA88D21E9
 
-- command:  docker --version
-  register: docker_version
+- name:           Adding Docker repository
+  apt_repository: repo='deb https://get.docker.io/ubuntu docker main' update_cache=yes
+
+- name: Installing Docker
+  apt:  name=lxc-docker force=yes
+
+- name:     Running Docker version
+  command:  docker --version
+  register: docker_version_out
 - assert:
     that:
-      - "'Docker' in docker_version.stdout"
+      - "'Docker' in docker_version_out.stdout"
 
-- command: docker run ubuntu:14.04 lsb_release -a
+- name:     Running Docker 'ubuntu' image
+  command:  docker run ubuntu:14.04 lsb_release -a
   register: lsb_output
 - assert:
     that:
