--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # http://docs.docker.com/installation/ubuntulinux/
 
-- name:    Adding Docker key file
+- name:    Adding Docker repository key
   apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=36A1D7869245C8950F966E92D8576A8BA88D21E9
 
 - name:           Adding Docker repository
