--- a/playbooks/roles/jenkins/tasks/main.yml
+++ b/playbooks/roles/jenkins/tasks/main.yml
@@ -1,18 +1,14 @@
 ---
 # https://wiki.jenkins-ci.org/display/JENKINS/Installing+Jenkins+on+Ubuntu
 
-- stat: path="{{ jenkins.home }}"
-  register: home_stat
-- set_fact:
-    install_jenkins: "{{ ( not home_stat.stat.exists ) or ( periodic|bool ) }}"
-- debug: var=install_jenkins
+- name:    Adding Jenkins repository key
+  apt_key: url='https://jenkins-ci.org/debian/jenkins-ci.org.key'
 
-- apt_key:        url='https://jenkins-ci.org/debian/jenkins-ci.org.key'
-  when:           install_jenkins
-- apt_repository: repo='deb http://pkg.jenkins-ci.org/debian binary/' update_cache=yes
-  when:           install_jenkins
-- apt:            name=jenkins state=latest force=yes
-  when:           install_jenkins
+- name:           Adding Jenkins repository
+  apt_repository: repo='deb http://pkg.jenkins-ci.org/debian binary/' update_cache=yes
+
+- name: Installing Jenkins
+  apt:  name=jenkins state=latest force=yes
 
 - name: Writing Jenkins files
   template:
