--- a/playbooks/jenkins-ubuntu.yml
+++ b/playbooks/jenkins-ubuntu.yml
@@ -11,10 +11,10 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: periodic-before, period: "{{ 24 * 3600 }}" }
+    - { role: run-before, period: "{{ 24 * 3600 }}" }
     - { role: base,    when: periodic }
     - { role: ansible, when: periodic }
     - { role: node.js, when: periodic }
     - java
     - jenkins
-    - periodic-after
+    - run-after
