--- a/playbooks/mysql-ubuntu.yml
+++ b/playbooks/mysql-ubuntu.yml
@@ -11,8 +11,8 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: periodic-before, period: "{{ 24 * 3600 }}" }
+    - { role: run-before, period: "{{ 24 * 3600 }}" }
     - { role: base,    when: periodic }
     - { role: ansible, when: periodic }
     - mysql
-    - periodic-after
+    - run-after
