--- a/playbooks/packer-ubuntu.yml
+++ b/playbooks/packer-ubuntu.yml
@@ -11,7 +11,7 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: periodic-before, period: "{{ 24 * 3600 }}" }
+    - { role: run-before, period: "{{ 24 * 3600 }}" }
     - { role: base,       when: periodic }
     - { role: ansible,    when: periodic }
     - { role: docker,     when: "( periodic|bool and ( not is_docker|bool ))" }
@@ -19,4 +19,4 @@
     - { role: virtualbox, when: periodic }
     - { role: ruby,       when: periodic }
     - packer
-    - periodic-after
+    - run-after
