--- a/playbooks/roles/run-before/tasks/main.yml
+++ b/playbooks/roles/run-before/tasks/main.yml
@@ -8,11 +8,21 @@
   set_fact:
     seconds_since_last_periodic: "{{ ansible_date_time.epoch|int - touch.stat.ctime|default(0)|int }}"
 
+- debug: var=period
+
 - name: Calculating if this should be a periodic run
   set_fact:
     periodic: "{{ ( not touch.stat.exists ) or ( seconds_since_last_periodic|int >= period|int ) }}"
 
 - debug: var=periodic
+- debug: var=common.start_service
+- debug: var=ami
+
+- name: Calculating 'start_service' flag
+  set_fact:
+    start_service: "{{ ( common.start_service|bool ) and ( not ( ami|default(false)|bool )) }}"
+
+- debug: var=start_service
 
 - debug: msg="Last successful periodic run was on {{ touch.stat.ctime | strftime }}, {{ seconds_since_last_periodic | explain }} ago"
   when: touch.stat.exists
