--- a/playbooks/mysql-ubuntu.yml
+++ b/playbooks/mysql-ubuntu.yml
@@ -11,8 +11,8 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: run-before, period: "{{ 24 * 3600 }}" }
-    - { role: base,    when: periodic }
-    - { role: ansible, when: periodic }
+    - { role: run-before, period: daily    }
+    - { role: base,       when:   periodic }
+    - { role: ansible,    when:   periodic }
     - mysql
     - run-after
