--- a/playbooks/packer-ubuntu.yml
+++ b/playbooks/packer-ubuntu.yml
@@ -11,12 +11,12 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: run-before, period: "{{ 24 * 3600 }}" }
-    - { role: base,       when: periodic }
-    - { role: ansible,    when: periodic }
-    - { role: docker,     when: "( periodic|bool and ( not is_docker|bool ))" }
-    - { role: vagrant,    when: periodic }
-    - { role: virtualbox, when: periodic }
-    - { role: ruby,       when: periodic }
+    - { role: run-before, period: daily    }
+    - { role: base,       when:   periodic }
+    - { role: ansible,    when:   periodic }
+    - { role: docker,     when:   "( periodic|bool and ( not is_docker|bool ))" }
+    - { role: vagrant,    when:   periodic }
+    - { role: virtualbox, when:   periodic }
+    - { role: ruby,       when:   periodic }
     - packer
     - run-after
