--- a/playbooks/asgard-ubuntu.yml
+++ b/playbooks/asgard-ubuntu.yml
@@ -13,9 +13,9 @@
     - [ roles/asgard/vars/aws.yml, vars/common.yml ]
 
   roles:
-    - { role: run-before, period: "{{ 24 * 3600 }}" }
-    - { role: base,    when: periodic }
-    - { role: ansible, when: periodic }
+    - { role: run-before, period: daily    }
+    - { role: base,       when:   periodic }
+    - { role: ansible,    when:   periodic }
     - java
     - asgard
     - run-after
