--- a/playbooks/roles/packer/tasks/main.yml
+++ b/playbooks/roles/packer/tasks/main.yml
@@ -6,14 +6,14 @@
 
 - name: Loading AWS credentials
   include_vars: aws.yml
-  when: packer_store_aws_credentials
+  when: ( packer.store_aws_credentials|bool and packer.load_aws_credentials|bool )
 
 - name: Verifying AWS credentials
   assert:
     that:
       - AWS_ACCESS_KEY_ID     is defined
       - AWS_SECRET_ACCESS_KEY is defined
-  when: packer_store_aws_credentials
+  when: packer.store_aws_credentials
 
 # http://www.packer.io/docs/builders/amazon-ebs.html#toc_2
 - name: Storing AWS credentials as environment variables
@@ -23,7 +23,7 @@
   with_items:
     - AWS_ACCESS_KEY_ID={{ AWS_ACCESS_KEY_ID }}
     - AWS_SECRET_ACCESS_KEY={{ AWS_SECRET_ACCESS_KEY }}
-  when: packer_store_aws_credentials
+  when: packer.store_aws_credentials
 
 - name: Calculating Packer download URL
   set_fact:
