--- a/playbooks/roles/ansible/vars/main.yml
+++ b/playbooks/roles/ansible/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 ansible: {
-  # version: 1.7.1, # or 'latest'
-  version: latest,
+  version: 1.7.2, # or 'latest'
+#  version: latest,
   latest: {
     command: "curl -s 'https://pypi.python.org/pypi/ansible' | grep '<title>' | sed 's/^.*<title>//' | cut -d' ' -f2",
     pattern: '^\d+\.\d+(\.\d+)?$'
