--- a/playbooks/roles/ruby/tasks/main.yml
+++ b/playbooks/roles/ruby/tasks/main.yml
@@ -1,36 +1,17 @@
 ---
 - name: Calculating Ruby version
   set_fact:
-    ruby_version: "{{ ruby.version | calculate( ruby ) }}"
+    ruby_version:    "{{ ruby.version | calculate( ruby ) }}"
+    additional_envs: ""
 
-- set_fact:
-    rvm_sh:   /opt/rvm.sh
-    ruby_bin: "{{ ruby.rvm.home }}/rubies/ruby-{{ ruby_version }}/bin"
-    rvm:      "{{ ruby.rvm.home }}/bin/rvm"
+- include: rbenv.yml
+  when: "{{ ruby.installer == 'rbenv' }}"
 
-- debug: var=ruby_version
-- debug: var=ruby_bin
+- include: rvm.yml
+  when: "{{ ruby.installer == 'rvm' }}"
 
-- name: Downloading RVM installation script
-  get_url:
-    url:   "{{ ruby.rvm.url }}"
-    dest:  "{{ rvm_sh }}"
-    force: yes
-
-- name: Chmoding RVM installation script
-  file:
-    name:  "{{ rvm_sh }}"
-    state: file
-    mode:  "{{ common.mode.script }}"
-
-- name:    Running RVM installation script
-  shell:   "{{ rvm_sh }}"
-
-- name:    Running RVM version
-  command: "{{ rvm }} --version"
-
-- name:     Installing Ruby
-  command:  "{{ rvm }} install '{{ ruby_version }}'"
+- assert: { that: "ruby_bin is defined" }
+- debug:  var=ruby_bin
 
 - name:   Creating PATH script
   template:
